fix: fix problem with jumping to previous page on using dropdowns

--- a/src/modules/ProductsPage/ProductsPage.module.scss
+++ b/src/modules/ProductsPage/ProductsPage.module.scss
@@ -95,6 +95,8 @@
     height: 32px;
     max-width: 100%;
     padding-inline: 12px;
+    border: none;
+    background-color: inherit;
 
     &:hover {
       background-color: var(--dropdown-item-hover-bg);
